[package]
name = "keesurv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
rand = "0.8.5"
# lettre = "0.10"
lettre = { version = "0.10", features = ["builder"] }
serde_json = "1.0.1"
# serde_json = { version = "1.0.1", features = ["std"] }
